# talkative-probes

./: .gitignore  .gitmodules  Goodfire -- Open Source SAE Demo.ipynb  Makefile  README.md  SAEclasses.py  SAEs_on_gpt2.py  SAEs_on_gpt2prime.py  SAEs_on_llama.py  SERVER.md  config.yaml  convert_svg_to_png.py  dataset_loading.py  evaluate_gemma_pgn.py  old_SAEs_on_gpt2.py  old_multi_token.py  package-lock.json  patch_and_run.py  presentation_notes.md  probes_notebook.py  probes_notebook_multitoken.py  pyproject.toml  requirements.txt  slurm-7504.out  slurm-7505.out  slurm-7506.out  slurm-7507.out  slurm-7508.out  slurm-7509.out  slurm-7510.out  slurm-7512.out  slurm-7513.out  slurm-7514.out  slurm-7515.out  slurm-7516.out  slurm-7517.out  slurm-7518.out  slurm-7519.out  slurm-7520.out  slurm-7523.out  (+6 more)
consistency-lens/: .cursorignore  .gitignore  1  CACHE_CYCLING_FIX_SUMMARY.md  CACHE_REGENERATION_VALIDATION.md  CHECKPOINT_TEST_SUMMARY.md  CLAUDE.md  GEMINI.md  INTERACTIVE_GUIDE.md  KV_CACHE_BUG_FIX_SUMMARY.md  LLAMA_COMPATIBILITY_SUMMARY.md  MULTI_LAYER_PATCHING_SUMMARY.md  Makefile  README.md  check_requires_grad_state.py  check_torchdata.py  convert_svg_to_png.sh  diagnose_resume_issue.py  kv_cache_comparison_20250531_171127.json  memory_snapshot.pickle  output_script.sh  pyproject.toml  slurm-1475.out  slurm-1478.out  slurm-1479.out  test_checkpoint_metadata.py  test_checkpoint_save_load.py  test_checkpoint_with_prompts.py
consistency-lens/.claude/: settings.local.json
consistency-lens/conf/: config.yaml  distributed.yaml  gemma2_2b_unfrozen_YES_postfix.yaml  gemma2_2b_unfrozen_nopostfix.yaml  gemma2_9b_frozen_YES_postfix.yaml  gemma2_9b_frozen_nopostfix.yaml  gemma2_CHAT_9b_frozen_nopostfix.yaml  gemma3_27b_frozen_YES_postfix.yaml  gemma3_27b_frozen_nopostfix.yaml  gemma3_4b_frozen_YES_postfix.yaml  gemma3_4b_frozen_nopostfix.yaml  gemma3_CHAT_4b_frozen_nopostfix.yaml  gpt2_frozen.yaml  gpt2_frozen_e6.yaml  gpt2_frozen_e6_wider.yaml  gpt2_frozen_e6_wider0p1incrbatch.yaml  gpt2_frozen_e6_wider0p1incrbatch256_4.yaml  gpt2_frozen_e6_wider0p1incrbatch512.yaml  gpt2_frozen_e6_wider1p0.yaml  gpt2_frozen_e6_wider1p0multigpu.yaml  gpt2_frozen_e6_wider1p0multigpu2.yaml  gpt2_frozen_e6_wider1p0multigpu2chgprompt.yaml  gpt2_frozen_e6_wider1p0multigpu3.yaml  gpt2_frozen_e6_wider1p0multigpu4.yaml  gpt2_frozen_e6_wider32lm1p0.yaml  gpt2_frozen_e6_widerMSE.yaml  gpt2_frozen_e6_widerMSE0p01.yaml  gpt2_frozen_e6_widerMSE0p1.yaml  gpt2_frozen_e6_widerzeroKL.yaml  gpt2_frozen_e6_widerzeroLM.yaml  gpt2_frozen_flash.yaml  gpt2_frozen_nopostfix_tuned.yaml  gpt2_frozen_nopostfix_tuned_pos.yaml  gpt2_frozen_postfix.yaml  gpt2_frozen_postfix_warmup.yaml  gpt2_frozen_postfix_warmup_tuned.yaml  gpt2_pile_frozen.yaml  gpt2_pile_unfreeze.yaml  gpt2_unfreeze.yaml  gpt2_unfreeze_e6_wider0p1.yaml  (+26 more)
consistency-lens/config/: lens.yaml  lens_pile10k.yaml  lens_simple.yaml  lens_tiny.yaml  wandb.yaml
consistency-lens/config_old/: ds_stage2.yaml  lens_pile10k.yaml  lens_simple.yaml  lens_tiny.yaml
consistency-lens/env/: Dockerfile  requirements.txt
consistency-lens/gemmamix/: train.json  val.json
consistency-lens/scripts/: 00_dump_activations.py  00_dump_activations_multigpu.py  00_dump_activations_multigpu_profile.py  01_train copy.py  01_train.py  01_train_distributed.py  01_train_new.py  02_eval.py  README.md  README_MULTIGPU.md  README_SLURM_EXPERIMENTS.md  README_SLURM_SETUP.md  README_submit_with_config.md  analyze_all_tokens.py  check_actual_init_values.py  check_prompt_nearest_tokens.py  check_soft_prompts.py  debug_prompt_state.py  diagnose_checkpoint_resume.py  diagnose_kl_jump.py  diagnose_prompt_issue.py  ensure_env.sh  example_custom_strings.py  extract_config_settings.py  gemma9b_evals.py  gemma9b_interactive_lens_notebook.py  gemma9b_interactive_lens_notebook_fellowscluster.py  gemma_interactive_lens_notebook.py  install_flash_attention.sh  interactive_lens.py  interactive_lens_analysis.py  interactive_lens_notebook.py  launch_distributed_train.sh  launch_multigpu_dump.sh  launch_multigpu_dump_hydra.sh  launch_multigpu_dump_optimized.sh  launch_multigpu_dump_pretokenized.sh  lens_analysis_report.txt  lens_analysis_results.csv  old_01_train_distributed.py  (+37 more)
consistency-lens/sweeps/: bayesian_hyperopt_example.yaml  lr_sweep_multigpu.yaml  lr_sweep_multigpu_example.yaml  lr_sweep_simplestories_frozen.yaml  lr_sweep_slurm_train_only.yaml  lr_sweep_slurm_train_only_gpt2.yaml  lr_sweep_slurm_train_only_gpt2largestep.yaml  lr_sweep_slurm_train_only_gpt2unfreeze.yaml
consistency-lens/tests/: FINAL_VALIDATION_SUMMARY.md  FWD_TOKENS_ALIGNMENT_REPORT.md  KV_CACHE_VALIDATION_REPORT.md  check_gpt2_forward.py  check_gpt2_layer_signature.py  check_gradient_flow.py  check_transformer_extraction.py  debug_autocast.py  debug_batch_2.py  debug_detailed_comparison.py  debug_embed_position.py  debug_final_issue.py  debug_flash_scale.py  debug_forward_pass.py  debug_full_model.py  debug_generation_detailed.py  debug_generation_divergence.py  debug_generation_step.py  debug_gradient_differences.py  debug_gradient_mismatch.py  debug_hidden_states.py  debug_incremental_shape.py  debug_incremental_tokens.py  debug_initial_forward.py  debug_kv_cache_gradients.py  debug_kv_cache_logits.py  debug_kv_cache_patching.py  debug_kv_detailed.py  debug_kv_format.py  debug_kv_incremental.py  debug_kv_initial_pass.py  debug_kv_issue.py  debug_kv_logits.py  debug_kv_positions.py  debug_kv_randomness.py  debug_kv_simple.py  debug_layer_11.py  debug_layer_11_detailed.py  debug_llama_layers.py  debug_logits_computation.py  (+107 more)
talkative_autoencoder/: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  ]  auditor.db  data-viewer-redirect.html  mxfp4.py  output_script.sh  plane_submit.sh  pyproject.toml  slurm-7502.out  slurm-7503.out  slurm-7511.out  slurm-7666.out  slurm-7667.out  slurm-7668.out  slurm-7669.out  test2_gpt.py  test3_gpt.py  test_gpt.py  test_unified_basic.py  test_unified_imports.py
talkative_autoencoder/.claude/: settings.local.json
talkative_autoencoder/conf/: README_CONFIGS.md  README_GPT2_EXPERIMENTS.md  (+54 more)
(+721 files in other folders)
