[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "consistency-lens"
description = "Train and evaluate Consistency Lenses"
requires-python = ">=3.10"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "transformers",
    "bitsandbytes>=0.42",
    "flash-attn>=2.7,<3.0",
    "deepspeed>=0.14",
    "wandb>=0.16",
    "torch",
    "hf-transfer",
    "datasets",
    "pytest"
]

[tool.setuptools]
packages = ["lens"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
