[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "consistency-lens"
description = "Train and evaluate Consistency Lenses"
requires-python = ">=3.10"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "transformers",
    "bitsandbytes>=0.42",
    "deepspeed>=0.14",
    "wandb>=0.16",
    "torch",
    "hf-transfer",
    "datasets",
    "pytest",
    "tqdm",
    "hydra-core",
    "psutil",
    "gputil",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "matplotlib>=3.10.3",
    "cairosvg>=2.8.2",
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
    "tuned-lens>=0.2.0",
    "python-dotenv>=1.1.0",
]

[tool.setuptools]
packages = ["lens"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
