[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "talkative-autoencoders"
description = "Train and evaluate talkative autoencoders"
requires-python = ">=3.10"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "bitsandbytes>=0.42",
    "deepspeed>=0.14",
    "wandb>=0.16",
    "torch==2.8.0",
    "hf-transfer",
    "datasets",
    "pytest",
    "tqdm",
    "psutil",
    "gputil",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "matplotlib>=3.10.3",
    "cairosvg>=2.8.2",
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
    "sentencepiece>=0.2.0",
    "jupyter-nbextensions-configurator>=0.6.4",
    "transformers>=4.53.3",
    "peft>=0.16.0",
    "fastapi>=0.116.1",
    "nvidia-ml-py>=12.535.108",
    "scipy",
    "uvicorn[standard]>=0.35.0",
    "slowapi>=0.1.9",
    "triton-kernels",
    "markupsafe==2.1.3",
]

[tool.setuptools]
packages = ["lens", "website", "website.backend", "website.backend.app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.uv.sources]
# For lightweight setup, skip local tuned-lens and triton-kernels vendoring.
# Uncomment for full dev if those directories are present.
# tuned-lens = { path = "tuned-lens" }
# triton-kernels = { git = "https://github.com/triton-lang/triton.git", subdirectory = "python/triton_kernels", rev = "main" }

[dependency-groups]
dev = [
    "tuned-lens",
]
